<resources>
    <string name="app_name">PMSUNews</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="title">Title</string>
    <string name="description">Description...</string>
    <string name="tags">Tags</string>

    <string name="login">Login</string>
    <string name="register"><u>Register</u></string>

    <string name="skip"><u>Skip</u></string>

    <string name="upload_image_btn">Upload image</string>
    <string name="create_btn">Create</string>
    <string name="create_post_btn">Create post</string>
    <string name="read_post_btn">Read post</string>
    <string name="settings_btn">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="home">Posts</string>
    <string name="all_post">All posts</string>
    <string name="preferances">Preferances</string>
    <string name="preferance_long">Change your preferances</string>
    <string name="create_post">Create post</string>
    <string name="create_post_long">Create new post</string>
    <string name="logout">LogOut</string>
    <string name="logout_long">Logout from the app</string>
    <string name="map">Map</string>
    <string name="map_long">Open map</string>
    <string name="users">Users</string>
    <string name="users_long">List of all users</string>

    <string name="pref_pick_date_key">pref_pick_date_key</string>
    <string name="pref_pick_date_title">Pick date</string>
    <string name="pref_pick_date_summ">Show all posts from picked date</string>

    <string name="pref_sort_posts_key">pref_sort_posts_key</string>
    <string name="pref_sort_posts">Sort posts</string>

    <string name="pref_sort_post_by_date_key">pref_sort_post_by_date_key</string>
    <string name="pref_sort_by_date_title">Sort by date</string>
    <string name="pref_sort_by_date_summ">Sort posts by date</string>

    <string name="pref_sort_post_by_like_key">pref_sort_post_by_like_key</string>
    <string name="pref_sort_by_like_title">Sort by likes</string>
    <string name="pref_sort_by_like_summ">Sort posts by likes</string>

    <string name="pref_sort_post_by_dislike_key">pref_sort_post_by_dislike_key</string>
    <string name="pref_sort_by_dislike_title">Sort by dislikes</string>
    <string name="pref_sort_by_dislike_summ">Sort posts by dislikes</string>


    <string name="pref_sort_comments_key">pref_sort_comments_key</string>
    <string name="pref_sort_comments">Sort comments</string>

    <string name="pref_sort_comment_by_date_key">pref_sort_comment_by_date_key</string>
    <string name="pref_sort_comments_by_date_title">Sort by date</string>
    <string name="pref_sort_comments_by_date_summ">Sort comments by date</string>

    <string name="pref_sort_comment_by_like_key">pref_sort_comment_by_like_key</string>
    <string name="pref_sort_comments_by_like_title">Sort by likes</string>
    <string name="pref_sort_comments_by_like_summ">Sort comments by likes</string>

    <string name="pref_sort_comment_by_dislike_key">pref_sort_comment_by_dislike_key</string>
    <string name="pref_sort_comments_by_dislike_title">Sort by dislikes</string>
    <string name="pref_sort_comments_by_dislike_summ">Sort comments by dislikes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
