<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_sort_posts"
        android:key="@string/pref_sort_posts_key">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_post_by_date_key"
            android:title="@string/pref_sort_by_date_title"
            android:summary="@string/pref_sort_by_date_summ"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_post_by_like_key"
            android:title="@string/pref_sort_by_like_title"
            android:summary="@string/pref_sort_by_like_summ"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_post_by_dislike_key"
            android:title="@string/pref_sort_by_dislike_title"
            android:summary="@string/pref_sort_by_dislike_summ"/>





    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/pref_sort_comments_key"
        android:title="@string/pref_sort_comments">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_comment_by_date_key"
            android:title="@string/pref_sort_comments_by_date_title"
            android:summary="@string/pref_sort_comments_by_date_summ"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_comment_by_like_key"
            android:title="@string/pref_sort_comments_by_like_title"
            android:summary="@string/pref_sort_comments_by_like_summ"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sort_comment_by_dislike_key"
            android:title="@string/pref_sort_comments_by_dislike_title"
            android:summary="@string/pref_sort_comments_by_dislike_summ"/>

    </PreferenceCategory>

</PreferenceScreen>